--- a/index.ipynb
+++ b/index.ipynb
@@ -157,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = \n"
+    "ba_latitude = -34.6037\n"
    ]
   },
   {
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = [-58.3816]\n"
+    "ba_longitude = -58.3816\n"
    ]
   },
   {
