--- a/index.ipynb
+++ b/index.ipynb
@@ -431,11 +431,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = 6"
+    "la_boca_marker = marker_six"
    ]
   },
   {
